k8s/webhook.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook
  namespace: nanomdm
  labels:
    app: webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook
  template:
    metadata:
      labels:
        app: webhook
    spec:
      volumes:
        - name: webhook
          configMap:
            name: webhook
            items:
              - key: webhook.py
                path: webhook.py
      containers:
      - name: webhook
        image: python:3.12
        command:
          - /bin/bash
          - "-c"
          - "pip install Flask && python3 /webhook.py"
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: webhook
          mountPath: /webhook.py
          subPath: webhook.py

---
apiVersion: v1
kind: Service
metadata:
  name: webhook
  namespace: nanomdm
spec:
  selector:
    app: webhook
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
