k8s/smallstep.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smallstep

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smallstep
  namespace: smallstep
  labels:
    app: smallstep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smallstep
  template:
    metadata:
      labels:
        app: smallstep
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: smallstep
        - name: ca
          secret:
            secretName: ca-secret
            items:
            - key: ca.crt
              path: ca.crt
            - key: tls.key
              path: tls.key
        - name: webhook-tls
          secret:
            secretName: webhook-tls
            items:
            - key: tls.crt
              path: tls.crt
            - key: tls.key
              path: tls.key
        - name: provisioner-password
          secret:
            secretName: provisioner-password
            items:
              - key: password
                path: provisioner-password
        - name: init
          configMap:
            name: init
            items:
              - key: init.sh
                path: init.sh

      containers:
        - name: smallstep
          image: smallstep/step-ca:0.28.3
          command:
            - "/usr/local/bin/step-ca"
            - "/data/config/ca.json"
            - "--password-file=/etc/smallstep/passwords/provisioner-password"
          ports:
            - containerPort: 443
          volumeMounts:
            - name: "data"
              mountPath: /data
            - name: "ca"
              mountPath: /etc/smallstep
            - name: "provisioner-password"
              mountPath: /etc/smallstep/passwords

        - name: webhook
          image: registry-internal.mycoolmdm.stream/webhook:1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: "webhook-tls"
              mountPath: /data

---
apiVersion: v1
kind: Service
metadata:
  name: smallstep
  namespace: smallstep
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: smallstep-skipverify@kubernetescrd
spec:
  selector:
    app: smallstep
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: smallstep
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-https-redirect@kubernetescrd
spec:
  rules:
  - host: "mycoolmdm.stream"
    http:
      paths:
      - path: /acme/acme/
        pathType: Prefix
        backend:
          service:
            name: smallstep
            port:
              number: 443
  tls:
    - secretName: ingress-tls
      hosts:
        - mycoolmdm.stream
